--- a/app/src/main/res/layout/mascotalst.xml
+++ b/app/src/main/res/layout/mascotalst.xml
@@ -4,32 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".ListadoPets">
 
     <include
         android:id="@+id/toolbar"
-        layout="@layout/actionbar">
-
+        layout="@layout/baraction2">
     </include>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvMascotas"
+        android:id="@+id/rvMascotas1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
         android:padding="16dp"
         android:layout_below="@id/toolbar"
         />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/toolbar"
-        android:layout_gravity="bottom|end"
-        android:layout_marginLeft="320dp"
-        android:layout_marginTop="594dp"
-        android:layout_marginBottom="16dp"
-        android:src="@drawable/photo" />
 
 </RelativeLayout>
